--- a/PropertyApp/PropertyApp.csproj
+++ b/PropertyApp/PropertyApp.csproj
@@ -996,19 +996,23 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Views\Shared\property-list.template.html" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\version.json" />
-    <Content Include="Views\Property\PropertyDetails.cshtml" />
+    <None Include="Views\Property\PropertyDetails.cshtml" />
     <Content Include="Views\Property\PropertyList.cshtml" />
     <Content Include="Views\Property\PropertyNew.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
