--- a/PropertyApp/Views/Web.config
+++ b/PropertyApp/Views/Web.config
@@ -30,6 +30,7 @@
     <handlers>
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
+      <add name="MyImageHandler" path="PropertyImages/*" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" resourceType="Either" requireAccess="Read"/>
     </handlers>
   </system.webServer>
 
